k8s/parser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prototype-parser-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: prototype-parser
    template:
        metadata:
            labels:
                component: prototype-parser
        spec:
            containers:
                - name: prototype-parser
                  image: erichodgins/prototype-parser:1.0.3
                  ports:
                    - containerPort: 5000
