k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prototype-server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: prototype-server
    template:
        metadata:
            labels:
                component: prototype-server
        spec:
            containers:
                - name: prototype-server
                  image: erichodgins/prototype-server:1.0.1
                  ports:
                    - containerPort: 3000
