k8s/parser-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: parser-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: prototype-parser
    ports:
        - port: 5000
          targetPort: 5000
