k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    tls:
        - hosts:        
            - erichodgins.ca
            - www.erichodgins.ca
          secretName: k8s-prototype-ca
    rules:
        - host: erichodgins.ca     
          http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 3000
                - path: /parser/?(.*)
                  backend:
                    serviceName: parser-cluster-ip-service
                    servicePort: 5000
        - host: www.erichodgins.ca     
          http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 3000
                - path: /parser/?(.*)
                  backend:
                    serviceName: parser-cluster-ip-service
                    servicePort: 5000
